--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,7 @@ The following topics are covered:
 * linear modeling workflow;
 * variance-covariance matrices;
 * multiple regression;
+* interactions (continuous-by-categorical; categorical-by-categorical);
 * linear mixed-effects regression;
 * generalized linear mixed-effects regression.
 
@@ -35,11 +36,11 @@ The material in this course forms the basis for a one-semester course for third-
 
 Unlike other textbooks you may have encountered, this is an **interactive textbook**. Each chapter contains embedded exercises as well as web applications to help students better understand the content. The interactive content will only work if you access this material through a web browser. Printing out the material is not recommended. If you want to access the textbook without an internet connection or have a local version to keep in case this site changes or moves, you can [download a version for offline use](offline-textbook.zip). Just extract the files from the ZIP archive, locate the file `index.html` in the `docs` directory, and open this file using a web browser.
 
-## How to cite this book
+## How to cite this book {-}
 
 Barr, Dale J. (2020). *Learning statistical models through simulation in R: An interactive textbook*. Version 0.9-1. Retrieved from https://psyteachr.github.io/book/ug3-stats.
 
-## Information for educators
+## Information for educators {-}
 
 You are free to re-use and modify the material in this textbook for your own purposes, with the stipulation that you cite the original work. Please note additional terms of the [Creative Commons CC-BY-SA 4.0 license](https://creativecommons.org/licenses/by-sa/4.0/) governing re-use of this material.
 
