--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -1,3 +1,33 @@
 # Introduction
 
-TODO
+## Goal of this course
+
+The goal of this course is to teach you how to simulate and analyze the various types of datasets you are likely to encounter as a psychologist. The focus is on behavioral data---e.g., measures of reaction time, perceptual judgments, choices, decision, ratings on a survey, hours of sleep, etc.---usually collected in the context of a study or experiment. 
+
+This course emphasizing approaches that maximize **flexibility**, **generalizability**, and **reproducibility**. It has become somewhat fashionable to talk about psychology as being in the throes of various 'crises'. There have been some high-profile replication failures that have contributed to the impression that psychology is in trouble. There have also been a number of demonstrations that the standard approaches to data analysis in psychology may be flawed, inasmuch as they allow researchers to present results as clean-cut and confirmatory while potentially hiding various analyses that have been pursued and discarded in order to attain the desired result. But it is not just the field of psychology where such problems can be found---the problem is widespread, encompassing other fields of study as well. And the truth is that a certain degree of self-criticism should be seen as the hallmark of a healthy discipline. The purpose of this course is to give you tools to ensure that your own analyses are not only statistically sound, but also as generalizable and reproducible as possible. 
+
+### Flexibility
+
+The approach taken in this course differs from other courses in that it emphasizes learning a flexible regression modeling framework rather than teaching 'recipes' for dealing with different types of data, and assumes that the fundamental type of data you will need to analyze will be `r glossary("multilevel", "having multiple measurements on the same variable on the same sampling unit (e.g., subject).")` and also that you will need to deal not only with continuous measurements but also ordinal measurements (ratings on a Likert scale), counts (number of times particular event types have taken place), and nominal data (what category something falls into).
+
+One limitation of the current course is that it focuses mainly on `r glossary("univariate", "single variable")` data, where a single `r glossary("response variable")` is the focus of analysis. It is often the case that you will be dealing with multiple response variables on the same subjects, but modeling them all simultaneously is technically very difficult and beyond the scope of this course. A simpler approach (and the one adopted here) is to analyze each response variable separately.
+
+## Generalizability
+
+The term `r glossary("generalizability")` refers to the degree to which findings from a study can be readily applied to situations beyond the particular context in which the data were collected. At best, our findings would apply to all members of the human species across a wide variety of contexts; at worst, they would apply only to those specific people observed in the specific context of our study. 
+
+## Reproduciblity
+
+The term `r glossary("reproducibility")` refers to the degree to which it is possible to obtain the pattern of findings reported in a study across some variation in context.
+
+We say a finding is *analytically* or *computationally* reproducible if, given the raw data, we can obtain the same pattern of results. 
+
+We say a finding is replicable if we can reliably obtain the finding with a new sample.
+
+## A simulation-based approach
+
+A final characteristic that distinguishes this course is that it uses a simulation-based approach to learning about statistical models.
+
+## What you will learn
+
+- TODO
