--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,10 @@
+@article{yarkoni_2019,
+  title={The generalizability crisis},
+  author={Yarkoni, Tal},
+  publisher={PsyArXiv},
+  url={https://doi.org/10.31234/osf.io/jqw35}
+}
+
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
