--- a/book.bib
+++ b/book.bib
@@ -2,6 +2,7 @@
   title={The generalizability crisis},
   author={Yarkoni, Tal},
   publisher={PsyArXiv},
+  year={2019},
   url={https://doi.org/10.31234/osf.io/jqw35}
 }
 
