--- a/04-interactions.Rmd
+++ b/04-interactions.Rmd
@@ -2,6 +2,7 @@
 
 ```{r setup, include=FALSE}
 library("kableExtra")
+library("tidyverse")
 
 .mk_tib <- function(x) {
   tibble(CBT = rep(c("No CBT", "CBT"), 2),
@@ -487,8 +488,467 @@ These are the equations you would used to estimate effects in an ANOVA.
 
 Note that the $Y$ variable with the dots in the subscripts are means of $Y$, taken while ignoring anything appearing as a dot. So $Y_{...}$ is mean of $Y$, $Y_{i..}$ is the mean of $Y$ at level $i$ of $A$, $Y_{.j.}$ is the mean of $Y$ at level $j$ of $B$, and $Y_{ij.}$ is the mean of $Y$ at level $i$ of $A$ and level $j$ of $B$, i.e., the cell mean $ij$.
 
-## Factorial App
+### Factorial App
 
 ![](images/04-interactions_factorial_app.png)
 
 [Launch this web application](http://shiny.psy.gla.ac.uk/Dale/factorial2){target="_blank"} and experiment with factorial designs until you understand the key concepts of main effects and interactions in a factorial design.
+
+## Code your own categorical predictors in factorial designs
+
+```{r setup2, include=FALSE}
+## paste
+.p <- paste0
+
+## .fraction
+.f <- function(x, y) {
+  paste0("\\frac{", x, "}{", y, "}")
+}
+
+## y-bar
+.yb1 <- function(x) {
+  paste0("$\\bar{Y}_{", x, "}$")
+}
+
+.yb2 <- function(x) {
+  paste0("\\bar{Y}_{", x, "}")
+}
+
+## subtraction term
+.st <- function(x, y, bracket = NULL) {
+  if (is.null(bracket)) {
+    paste0(x, " - ", y)
+  } else {
+    paste0(bracket[1], x, " - ", y, bracket[2])
+  }
+}
+
+.rb <- c("(", ")")
+.dr <- c("\\displaystyle\\left(", "\\right)")
+.ds <- c("\\displaystyle\\left[", "\\right]")
+```
+
+Many studies in psychology---especially experimental psychology---involve categorical independent variables. Analyzing data from these studies requires care in specifying the predictors, because the defaults in R are not ideal for experimental situations.
+
+Let's say you have 2x2 designed experiment with factors priming condition (priming vs. no priming) and linguistic structure (noun vs verb). These columns can be represented as type `character` or `factor`; in the latter case, they are implicitly converted to type `factor` before fitting the model, and then R will apply the default numerical coding for factors, which is 'treatment' (0, 1) coding.
+
+If you're used to running ANOVAs, the results that you get from fitting a linear model will *not* match ANOVA output, as we'll see below.  That is because you need to use a different coding scheme to get ANOVA-like output.
+
+First, let's define our little data set, `dat`.
+
+```{r demo-no-factors}
+  ## demo for why you should avoid factors
+  dat <- tibble(
+    subject = factor(1:16),
+    priming = rep(c("yes", "no"), each = 8),
+    structure = rep(rep(c("noun", "verb"), each = 4), 2),
+    RT = rnorm(16, 800, 20))
+
+  dat
+```
+
+This is between subjects data, so we can fit a model using `lm()`.  In the model, we include effects of `priming` and `structure` as well as their interaction. Instead of typing `priming + structure + priming:structure` we can simply type the shortcut `priming * structure`.
+
+```{r specify-fixed}
+  ps_mod <- lm(RT ~ priming * structure, dat)
+
+  summary(ps_mod)
+```
+
+Note that in the output the predictors are shown as `primingyes` and `structureverb`. The value `yes` is a level of `priming`; the level **not shown** is the one chosen as baseline, and in the default treatment coding scheme, the not-shown level (`no`) is coded as 0, and the shown level (`yes`) is coded as 1. Likewise, for `structure`, `noun` is coded as 0 and `verb` is coded as 1.
+
+This is not ideal, for reasons we will discuss further below. But I want to show you a further quirk of using factor variables as predictors.
+
+Let's say we wanted to test the effect of `priming` by itself using model comparison. To do this, we would fit another model where we exclude this effect while keeping the interaction. Despite what you may have heard to the contrary, in a fully randomized, balanced experiment, all factors are orthogonal, and so it is completely legitimate to drop a main effect while leaving an interaction term in the model.
+
+```{r drop-factor}
+  ps_mod_nopriming <- lm(RT ~ structure + priming:structure, dat)
+```
+
+OK, now that we've dropped `priming`, we should have 3 parameter estimates instead of 4. Let's check.
+
+```{r check-factor}
+  ## not right!
+  coef(ps_mod_nopriming)
+```
+
+There are still 4 of them, and we're suddenly getting `primingyes:structureverb`. This is weird and *not at all* what we intended.  If we try to do the model comparison:
+
+```{r mod-compare}
+  ## nonsense result
+  anova(ps_mod_nopriming, ps_mod)
+```
+
+we'd get nonsensical results.
+
+Is this a bug? No. It was a (in my view, heavy handed) design choice by the R creators to try to prevent everyone from doing something that at least some of us should be able to do at least some of the time.
+
+But we can do whatever we please if instead of using factors we define our own numerical predictors. This adds a bit of work but avoids other headaches and mistakes that we might make by using factors. Also, being very explicit about how predictors are defined is probably a good thing.
+
+You'll sometimes need `factor` variables. I often use them to get things to plot in the right way using `ggplot2`, or when I need to tabulating observations and there are some combinations with zero counts. But I recommend against using `factors` in statistical models, especially if your model includes interactions. Use numerical predictors instead.
+
+## Coding schemes for categorical variables
+
+Many experimentalists who are trying to make the leap from ANOVA to linear mixed-effects models (LMEMs) in R struggle with the coding of categorical predictors.  It is unexpectedly complicated, and the defaults provided in R turn out to be wholly inappropriate for factorial experiments.  Indeed, using those defaults with factorial experiments can lead researchers to draw erroneous conclusions from their data.
+
+To keep things simple, we'll start with situations where design factors have no more than two levels before moving on to designs with more than three levels.
+
+### Simple versus main effects
+
+It is important that you understand the difference between a **simple effect** and a **main effect**, and between a **simple interaction** and a **main interaction** in a three-way design.
+
+In an \(A{\times}B\) design, the simple effect of \(A\) is the effect of \(A\) **controlling** for \(B\), while the main effect of \(A\) is the effect of \(A\) **ignoring** \(B\).  Another way of looking at this is to consider the cell means (\(\bar{Y}_{11}\), \(\bar{Y}_{12}\), \(\bar{Y}_{21}\), and \(\bar{Y}_{22}\)) and marginal means (\(\bar{Y}_{1.}\), \(\bar{Y}_{2.}\), \(\bar{Y}_{.1}\), and \(\bar{Y}_{.2}\)) in a factorial design. (The dot subscript tells you to "ignore" the dimension containing the dot; e.g., \(\bar{Y}_{.1}\) tells you to take the mean of the first column ignoring the row variable.) To test the main effect of A is to test the null hypothesis that \(\bar{Y}_{1.}=\bar{Y}_{2.}\).  To test a simple effect of \(A\)—the effect of \(A\) at a particular level of \(B\)—would be, for instance, to test the null hypothesis that \(\bar{Y}_{11}=\bar{Y}_{21}\).
+
+```{r simple-effect, echo=FALSE}
+tribble(~blah, ~B_1, ~B_2, ~junk, ~marg,
+        "\\(A_1\\)", .yb1("11"), .yb1("12"), "", .yb1("1."),
+        "\\(A_2\\)", .yb1("21"), .yb1("22"), "", .yb1("2."),
+        "", "", "", "", "",
+        "", .yb1(".1"), .yb1(".2"), "", "") %>%
+  kable(col.names = c("", "\\(B_1\\)", "\\(B_2\\)", "", ""),
+        align = "cccc")  %>%
+  kable_styling(full_width = FALSE, bootstrap_options = "basic")
+```
+
+The distinction between **simple interactions** and **main interactions** has the same logic: the simple interaction of \(AB\) in an \(ABC\) design is the interaction of \(AB\) at a particular level of \(C\); the main interaction of \(AB\) is the interaction **ignoring** C.  The latter is what we are usually talking about when we talk about lower-order interactions in a three-way design.  It is also what we are given in the output from standard ANOVA procedures, e.g., the `aov()` function in R, SPSS, SAS, etc.
+
+### The key coding schemes
+
+Generally, the choice of a coding scheme impacts the interpretation of:
+
+1. the intercept term; and
+2. the interpretation of the tests for all but the highest-order effects and interactions in a factorial design.
+
+It also can influence the interpretation/estimation of random effects in a mixed-effects model (see [this blog post](http://talklab.psy.gla.ac.uk/simgen/rsonly.html) for further discussion).  If you have a design with only a single two-level factor, and are using a [maximal random-effects structure](https://www.sciencedirect.com/science/article/pii/S0749596X12001180), the choice of coding scheme doesn't really matter.
+
+There are many possible coding schemes (see `?contr.treatment` for more information).  The most relevant ones are **treatment**, **sum**, and **deviation**.  Sum and deviation coding can be seen as special cases of **effect** coding; by effect coding, people generally mean codes that sum to zero.
+
+For a two-level factor, you would use the following codes:
+
+```{r coding-schemes, echo=FALSE}
+tribble(~Coding, ~A_1, ~A_2,
+        "Treatment (dummy)", "\\(0\\)", "\\(1\\)",
+        "Sum",               "\\(-1\\)", "\\(1\\)",
+        "Deviation",
+        .p("\\(", "-", .f(1, 2), "\\)"),
+        .p("\\(", .f(1, 2), "\\)")) %>%
+  kable(col.names = c("Scheme", "\\(A_1\\)", "\\(A_2\\)"),
+        align = "lrrr")  %>%
+  kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+The default in R is to use treatment coding for any variable defined as a =factor= in the model (see `?factor` and `?contrasts` for information).  To see why this is not ideal for factorial designs, consider a 2x2x2 factorial design with factors $A$, $B$ and $C$.  We will just consider a fully between-subjects design with only one observation per subject as this allows us to use the simplest possible error structure.  We would fit such a model using `lm()`:
+
+: lm(Y ~ A * B * C)
+
+The figure below spells out the notation for the various cell and marginal means for a 2x2x2 design.
+
+<div class="column" style="float:left; width: 50%">
+
+$$C_1$$
+
+```{r simple-effect-C1, echo=FALSE}
+tribble(~blah, ~B_1, ~B_2, ~junk, ~marg,
+        "\\(A_1\\)", .yb1("111"), .yb1("121"), "", .yb1("1.1"),
+        "\\(A_2\\)", .yb1("211"), .yb1("221"), "", .yb1("2.1"),
+        "", "", "", "", "",
+        "", .yb1(".11"), .yb1(".21"), "", "") %>%
+  kable(col.names = c("", "\\(B_1\\)", "\\(B_2\\)", "", ""),
+        align = "cccc")  %>%
+  kable_styling(full_width = FALSE, bootstrap_options = "basic")
+```
+
+</div>
+
+<div class="column" style="float:right; width: 50%">
+
+$$C_2$$
+
+```{r simple-effect-C2, echo=FALSE}
+tribble(~blah, ~B_1, ~B_2, ~junk, ~marg,
+        "\\(A_1\\)", .yb1("112"), .yb1("122"), "", .yb1("1.2"),
+        "\\(A_2\\)", .yb1("212"), .yb1("222"), "", .yb1("2.2"),
+        "", "", "", "", "",
+        "", .yb1(".12"), .yb1(".22"), "", "") %>%
+  kable(col.names = c("", "\\(B_1\\)", "\\(B_2\\)", "", ""),
+        align = "cccc")  %>%
+  kable_styling(full_width = FALSE, bootstrap_options = "basic")
+```
+
+</div>
+
+The table below provides the interpretation for various effects in the model under the three different coding schemes.  Note that $Y$ is the dependent variable, and the dots in the subscript mean to "ignore" the corresponding dimension.  Thus, \(\bar{Y}_{.1.}\) is the mean of B_1 (ignoring factors \(A\) and \(C\)) and \(\bar{Y}_{...}\) is the "grand mean" (ignoring all factors).
+
+```{r parameter-interpretation, echo = FALSE}
+tribble(~term, ~treatment, ~sum, ~deviation,
+        "\\(\\mu\\)", .yb1("111"), .yb1("..."), .yb1("..."),
+        ## (A) second row
+        "\\(A\\)",
+        .p("\\(", .st(.yb2("211"), .yb2("111")), "\\)"),
+        .p("\\(", .f(.st(.yb2("2.."), .yb2("1.."), .rb), 2), "\\)"),
+        .p("\\(", .st(.yb2("2.."), .yb2("1..")), "\\)"),
+        "\\(B\\)",
+        .p("\\(", .st(.yb2("121"), .yb2("111")), "\\)"),
+        .p("\\(", .f(.st(.yb2(".2."), .yb2(".1."), .rb), 2), "\\)"),
+        .p("\\(", .st(.yb2(".2."), .yb2(".1.")), "\\)"),
+        "\\(C\\)",
+        .p("\\(", .st(.yb2("112"), .yb2("111")), "\\)"),
+        .p("\\(", .f(.st(.yb2("..2"), .yb2("..1"), .rb), 2), "\\)"),
+        .p("\\(", .st(.yb2("..2"), .yb2("..1")), "\\)"),
+        "\\(AB\\)",
+        .p("\\(", .st(.st(.yb2("221"), .yb2("121"), .rb),
+                    .st(.yb2("211"), .yb2("111"), .rb)),
+           "\\)"),
+        .p("\\(", .f(.st(.st(.yb2("22."), .yb2("12."), .rb),
+                       .st(.yb2("21."), .yb2("11."), .rb)), 4),
+           "\\)"),
+        .p("\\(", .st(.st(.yb2("22."), .yb2("12."), .rb),
+                    .st(.yb2("21."), .yb2("11."), .rb)),
+           "\\)"),
+        "\\(AC\\)",
+        .p("\\(", .st(.st(.yb2("212"), .yb2("211"), .rb),
+                    .st(.yb2("112"), .yb2("111"), .rb)),
+           "\\)"),
+        .p("\\(", .f(.st(.st(.yb2("2.2"), .yb2("1.2"), .rb),
+                       .st(.yb2("2.1"), .yb2("1.1"), .rb)), 4),
+           "\\)"),
+        .p("\\(", .st(.st(.yb2("2.2"), .yb2("1.2"), .rb),
+                    .st(.yb2("2.1"), .yb2("1.1"), .rb)),
+           "\\)"),
+        "\\(BC\\)",
+        .p("\\(", .st(.st(.yb2("122"), .yb2("112"), .rb),
+                    .st(.yb2("121"), .yb2("111"), .rb)),
+           "\\)"),
+        .p("\\(", .f(.st(.st(.yb2(".22"), .yb2(".12"), .rb),
+                       .st(.yb2(".21"), .yb2(".11"), .rb)), 4),
+           "\\)"),
+        .p("\\(", .st(.st(.yb2(".22"), .yb2(".12"), .rb),
+                    .st(.yb2(".21"), .yb2(".11"), .rb)),
+           "\\)")
+        ) %>%
+  kable(align = "cccc")  %>%
+  kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+For the three way \(A \times B \times C\) interaction:
+
+```{r three-way, echo=FALSE}
+tribble(~scheme, ~interpretation,
+        "treatment",
+        .p("\\(",
+           .st(.st(.st(.yb2(221), .yb2(121), .dr),
+                   .st(.yb2(211), .yb2(111), .dr), .ds),
+               .st(.st(.yb2(222), .yb2(122), .dr),
+                   .st(.yb2(212), .yb2(112), .dr), .ds)),
+           "\\)"),
+        "sum",
+        .p("\\(",
+           .f(
+             .st(.st(.st(.yb2(221), .yb2(121), .dr),
+                     .st(.yb2(211), .yb2(111), .dr), .ds),
+                 .st(.st(.yb2(222), .yb2(122), .dr),
+                     .st(.yb2(212), .yb2(112), .dr), .ds)),
+             8),
+           "\\)"),
+        "deviation",
+        .p("\\(",
+           .st(.st(.st(.yb2(221), .yb2(121), .dr),
+                   .st(.yb2(211), .yb2(111), .dr), .ds),
+               .st(.st(.yb2(222), .yb2(122), .dr),
+                   .st(.yb2(212), .yb2(112), .dr), .ds)),
+           "\\)")
+        ) %>%
+  kable(align = "cc") %>%
+  kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+Note that the inferential tests of $A \times B \times C$ will all have the same outcome, despite the parameter estimate for sum coding being one-eighth of that for the other schemes.  For all lower-order effects, sum and deviation coding will give different parameter estimates but identical inferential outcomes.  Both of these schemes provide identical tests of the canonical main effects and main interactions for a three-way ANOVA.  In contrast, treatment (dummy) coding will provide inferential tests of simple effects and simple interactions.  So, if what you are interested in getting are the "canonical" tests from ANOVA, use sum or deviation coding.
+
+### What about factors with more than two levels?
+
+A factor with \(k\) levels requires \(k-1\) variables. Each predictor contrasts a particular "target" level of the factor with a level that you (arbitrarily) choose as the "baseline" level.  For instance, for a three-level factor \(A\) with \(A1\) chosen as the baseline, you'd have two predictor variables, one of which compares \(A2\) to \(A1\) and the other of which compares \(A3\) to \(A1\).
+
+For treatment (dummy) coding, the target level is set to 1, otherwise 0.
+
+For sum coding, the levels must sum to zero, so for a given predictor, the target level is given the value 1, the baseline level is given the value -1, and any other level is given the value 0.
+
+For deviation coding, the values must also sum to 0. Deviation coding is recommended whenever you are trying to draw ANOVA-style inferences. Under this scheme, the target level gets the value \(\frac{k-1}{k}\) while any non-target level gets the value \(-\frac{1}{k}\).   
+
+**Fun fact**: Mean-centering treatment codes (on balanced data) will give you deviation codes.
+
+### Example: Three-level factor
+
+#### Treatment (Dummy)
+
+```{r treatment-3-dummy, echo = FALSE}
+tribble(~level, ~A2v1, ~A3v1,
+        "A1", 0L, 0L,
+        "A2", 1L, 0L,
+        "A3", 0L, 1L) %>%
+  knitr::kable(align = "lrr") %>%
+  kableExtra::kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+#### Sum
+
+```{r sum-3, echo = FALSE}
+tribble(~level, ~A2v1, ~A3v1,
+        "A1", -1L, -1L,
+        "A2",  1L,  0L,
+        "A3",  0L,  1L) %>%
+  knitr::kable(align = "lrr") %>%
+  kableExtra::kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+#### Deviation
+
+```{r deviation-3, echo=FALSE}
+tribble(~level, ~A2v1, ~A3v1,
+        "A1", "\\(-\\frac{1}{3}\\)", "\\(-\\frac{1}{3}\\)",
+        "A2",  "\\(\\frac{2}{3}\\)", "\\(-\\frac{1}{3}\\)",
+        "A3", "\\(-\\frac{1}{3}\\)",  "\\(\\frac{2}{3}\\)") %>%
+  knitr::kable(align = "lrr") %>%
+  kableExtra::kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+#### Example: Five-level factor
+
+#### Treatment (Dummy)
+
+```{r treatment-5, echo=FALSE}
+tribble(~level, ~A2v1, ~A3v1, ~A4v1, ~A5v1,
+        "A1", 0L, 0L, 0L, 0L,
+        "A2", 1L, 0L, 0L, 0L,
+        "A3", 0L, 1L, 0L, 0L,
+        "A4", 0L, 0L, 1L, 0L,
+        "A5", 0L, 0L, 0L, 1L) %>%
+  knitr::kable(align = "lrrrr") %>%
+  kableExtra::kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+#### Sum
+
+
+```{r sum-5, echo=FALSE}
+tribble(~level, ~A2v1, ~A3v1, ~A4v1, ~A5v1,
+        "A1", -1L,     -1L, -  1L,   -1L,
+        "A2",  1L,      0L,    0L,    0L,
+        "A3",  0L,      1L,    0L,    0L,
+        "A4",  0L,      0L,    1L,    0L,
+        "A5",  0L,      0L,    0L,    1L) %>%
+  knitr::kable(align = "lrrrr") %>%
+  kableExtra::kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+#### Deviation
+
+```{r deviation-5, echo=FALSE}
+tribble(~level, ~A2v1, ~A3v1, ~A4v1, ~A5v1,
+        "A1", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)",
+        "A2",  "\\(\\frac{4}{5}\\)", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)",
+        "A3", "\\(-\\frac{1}{5}\\)", "\\(\\frac{4}{5}\\)", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)",
+        "A4", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)", "\\(\\frac{4}{5}\\)", "\\(-\\frac{1}{5}\\)",
+        "A5", "\\(-\\frac{1}{5}\\)", "\\(-\\frac{1}{5}\\)", 
+        "\\(-\\frac{1}{5}\\)", "\\(\\frac{4}{5}\\)") %>%
+  knitr::kable(align = "lrrrr") %>%
+  kableExtra::kable_styling(full_width = FALSE, bootstrap_options = "striped")
+```
+
+### How to create your own numeric predictors
+
+Let's assume that your data is contained in a table `dat` like the one below.
+
+```{r specify-fixed-1}
+ ## create your own numeric predictors
+ ## make an example table
+ dat <- tibble(Y = rnorm(12),
+               A = rep(paste0("A", 1:3), each = 4))
+```
+
+`r hide("Click to view example data")`
+
+```{r view-example-data, echo=FALSE}
+ knitr::kable(dat, digits = 2) %>%
+   kableExtra::kable_styling(full_width = FALSE)
+```
+
+`r unhide()`
+
+#### The `mutate()` / `if_else()` / `case_when()` approach for a three-level factor
+
+#### Treatment
+
+```{r treat-3-mutate}
+  ## examples of three level factors
+  ## treatment coding
+  dat_treat <- dat %>%
+    mutate(A2v1 = if_else(A == "A2", 1L, 0L),
+	   A3v1 = if_else(A == "A3", 1L, 0L))
+```
+
+`r hide("Click to view resulting table")`
+
+```{r dat-treat, echo=FALSE}
+dat_treat
+```
+
+`r unhide()`
+
+#### Sum
+
+```{r sum-3-mutate}
+## sum coding
+dat_sum <- dat %>%
+  mutate(A2v1 = case_when(A == "A1" ~ -1L, # baseline
+                          A == "A2" ~ 1L,  # target
+                          TRUE      ~ 0L), # anything else
+         A3v1 = case_when(A == "A1" ~ -1L, # baseline
+                          A == "A3" ~  1L, # target
+                          TRUE      ~ 0L)) # anything else
+```
+
+`r hide("Click to view resulting table")`
+
+```{r dat-sum, echo=FALSE}
+dat_sum
+```
+
+`r unhide()`
+
+#### Deviation
+
+```{r deviation-3-mutate}
+## deviation coding
+## baseline A1
+dat_dev <- dat %>%
+  mutate(A2v1 = if_else(A == "A2", 2/3, -1/3), # target A2
+         A3v1 = if_else(A == "A3", 2/3, -1/3)) # target A3
+```
+
+`r hide("Click to view resulting table")`
+
+```{r dat-dev}
+dat_dev
+```
+
+`r unhide()`
+
+### Conclusion
+
+**The interpretation of all but the highest order effect depends on the coding scheme.**
+
+With treatment coding, you are looking at **simple** effects and **simple** interactions, not **main** effects and **main** interactions.
+
+**The parameter estimates for sum coding differs from deviation coding only in the magnitude of the parameter estimates, but have identical interpretations.**
+
+Because it is not subject to the scaling effects seen under sum coding, deviation should be used by default for ANOVA-style designs.
+
+**The default coding scheme for factors is R is "treatment" coding.**
+
+So, anytime you declare a variable as type `factor` and use this variable as a predictor in your regression model, R will automatically create treatment-coded variables.
+
+<div class="warning">
+
+**Take-home message: when analyzing factorial designs in R using regression, to obtain the canonical ANOVA-style interpretations of main effects and interactions use deviation coding and NOT the default treatment coding.**
+
+</div>
