--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,13 @@
+@article{Belenky_et_al_2003,
+  title={Patterns of performance degradation and restoration during sleep restriction and subsequent recovery: A sleep dose-response study},
+  author={Belenky, Gregory and Wesensten, Nancy J and Thorne, David R and Thomas, Maria L and Sing, Helen C and Redmond, Daniel P and Russo, Michael B and Balkin, Thomas J},
+  journal={{Journal of Sleep Research}},
+  volume={12},
+  number={1},
+  pages={1--12},
+  year={2003}
+}
+
 @article{yarkoni_2019,
   title={The generalizability crisis},
   author={Yarkoni, Tal},
@@ -33,16 +43,18 @@
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
-@article{TOSTtutorial,
-  author = {Daniël Lakens and Anne M. Scheel and Peder M. Isager},
-  title = {Equivalence Testing for Psychological Research: A Tutorial},
-  journal = {Advances in Methods and Practices in Psychological Science},
-  volume = {1},
-  number = {2},
-  pages = {259--269},
-  year = {2018},
-  doi = {10.1177/2515245918770963},
-  URL = { https://doi.org/10.1177/2515245918770963 },
-  eprint = { https://doi.org/10.1177/2515245918770963 },
-  abstract = { Psychologists must be able to test both for the presence of an effect and for the absence of an effect. In addition to testing against zero, researchers can use the two one-sided tests (TOST) procedure to test for equivalence and reject the presence of a smallest effect size of interest (SESOI). The TOST procedure can be used to determine if an observed effect is surprisingly small, given that a true effect at least as extreme as the SESOI exists. We explain a range of approaches to determine the SESOI in psychological science and provide detailed examples of how equivalence tests should be performed and reported. Equivalence tests are an important extension of the statistical tools psychologists currently use and enable researchers to falsify predictions about the presence, and declare the absence, of meaningful effects. }
+@book{McElreath_2020,
+  title = {{Statistical Rethinking: A Bayesian course with examples in R and STAN}},
+  author = {Richard McElreath},
+  publisher = {CRC Press},
+  year = {2020}
+}
+
+@article{Bates_et_al_2015,
+  title={Fitting linear mixed-effects models using lme4},
+  author={Bates, DM and Maechler, M and Bolker, BM and Walker, S},
+  journal={{Journal of Statistical Software}},
+  volume={67},
+  pages={1--48},
+  year={2015}
 }
